test/arrays/deitz/part6/test_bounds2.chpl
var A : [1..5, 1..5] int;

writeln(A(1, 5));
writeln(A(1, 6));
